# substrate-vanity-address

./: Cargo.toml  README.md
src/: main.rs
